testing full configuration management

--- a/py_src/src/mpidock.config
+++ b/py_src/src/mpidock.config
@@ -48,7 +48,7 @@
 #					   clean up (delete) files generated while
 #					   operating mpiDOCK that are not required.
 #
-vina_config=./vina_conf.txt
+vina_config=./Vina/conf.txt
 receptors_dir=./receptors
 ligands_dir=./ligands
 output_dir=./output
