final push before testing

--- a/py_src/src/mpidock.config
+++ b/py_src/src/mpidock.config
@@ -87,7 +87,7 @@ networks_dir=./bin/nnscore/networks/top_24_networks
 #
 #	vina : path to the vina executable
 #
-vina=./Vina/vina
+vina=./bin/Vina/vina
 dsx=./bin/dsx/linux64/dsx_linux_64.lnx
 xscore=./bin/xscore/bin/xscore
 nnscore=./bin/nnscore/NNScore.py
