--- a/.gitignore
+++ b/.gitignore
@@ -35,5 +35,5 @@
 *.po[0-9]*
 
 #RFScore executable
-py_src/src/bin/rfscore/rf-score-vs
-py_src/src/bin/archives/rfscore.tar.gz
+bin/rfscore/rf-score-vs
+bin/archives/RFScore.tar.gz
