preparing to test

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,8 @@
 #RFScore executable
 bin/rfscore/rf-score-vs
 bin/archives/rfscore.tar.gz
+
+#Ligand and receptor files
+receptors/*.pdbqt
+receptors/*.pdb
+ligands/*.pdbqt
