--- a/config/mpidock.config
+++ b/config/mpidock.config
@@ -61,13 +61,12 @@ run_rfscore=yes
 clean_temp_files=yes
 #
 #---Vina Variables---
-vina_config=./config/vina.txt
+vina_config=./config/vina.conf
 #
 #---DSX Variables---
 pdb_potentials_dir=./bin/dsx/pdb_pot_0511
 #
 #---XSCORE Variables---
-xscore_base_config=./config/xscore.txt
 #
 #--NNScore Variables---
 networks_dir=./bin/nnscore/networks/top_24_networks
