--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 *.ko
 *.obj
 *.elf
+*.pyc
 
 # Precompiled Headers
 *.gch
@@ -42,3 +43,5 @@ bin/archives/rfscore.tar.gz
 receptors/*.pdbqt
 receptors/*.pdb
 ligands/*.pdbqt
+
+logs/*
